<resources>
    <string name="app_name">Faça seu pedido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cart">Carrinho</string>
    <string name="menu_order_history">Pedidos</string>
    <string name="menu_my_account">Conta</string>

    <string name="generic_error">Ops! \nOcorreu um erro.</string>
    <string name="informe_quantity">Informe a quantidade</string>
    <string name="quantity">Quantidade</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="product_added_to_cart">Produto Adicionado ao carrinho</string>
    <string name="error_add_to_cart">Erro ao adicionar produto</string>
    <string name="go_to_cart">Ir para o carrinho</string>
    <string name="alter"><u>Alterar</u></string>
    <string name="confirm_order">Confirmar Pedido</string>
    <string name="confirmation_order">Confirmação do Pedido</string>
    <string name="confirm_order_message">Total: %1$s\nQuantidade de itens: %2$s\nDeseja confirmar o pedido?</string>
    <string name="keep_buying">Continuar Comprando</string>
    <string name="products_not_found_into_cart">Não existe \nprodutos \nno carrinho</string>
    <string name="updated_quantity_product">Quantidade do produto alterada</string>
    <string name="updated_quantity_product_error">Erro ao Alterar quantidade do produto</string>
    <string name="deleted_product">Produto excluido do carrinho</string>
    <string name="deleted_product_error">Erro ao excluir produto do carrinho</string>
    <string name="confirm_to_deleted_product">Confirmação para exclusão de produto</string>
    <string name="Do_you_want_to_delete_this_product_from_the_cart">Deseja excluir este produto do carrinho?</string>
    <string name="confirm_clear_cart">Confirmação para limpar Carrinho</string>
    <string name="do_you_want_to_delete_alL_products_from_the_cart">Deseja excluir todos os produtos do carrinho?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="create_order_error">Erro ao realizar pedido</string>
    <string name="total_error">Erro ao atualizar total</string>
    <string name="create_order">Pedido realizar com sucesso</string>
    <string name="total_items_in_cart">%1$d itens</string>
    <string name="quantity_label">Quantidade: %1$s</string>
    <string name="orders_history_not_found">Voce não possui historico de pedidos</string>

    <string name="order_id">ID do pedido: %1$s</string>
    <string name="order_total_price">Valor total: %1$s</string>
    <string name="order_quantity">Quantidade de itens: %1$s</string>
    <string name="decription">Descrição</string>
    <string name="success_order">Pedido realizado com sucesso! \nvocê pode visualizar AGORA seu pedido \nclicando no botão abaixo</string>
    <string name="view_orders">Visualizar pedidos</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add ao carrinho</string>
    <string name="inform_quantity">Informar quantidade</string>
    <string name="confirm">Confirmar</string>
    <string name="welcome_user">Oi, %1$s ;)</string>
    <string name="login_or_register"><u>Faça login ou cadastre-se</u></string>
    <string name="logout">Sair</string>
    <string name="change_password">Alterar senha</string>
    <string name="change_username">Alterar nome</string>
    <string name="change_username_success">Senha alterada com sucesso</string>
    <string name="change_username_error">Erro ao alterar senha</string>
</resources>