<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/dimen_32dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleDialogView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inform_quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quantityDialogView"
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmDialogView"
        style="@style/Style.Button.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/confirm" />
</LinearLayout>