<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:padding="@dimen/dimen_20dp">

    <TextView
        android:id="@+id/quantityTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/totalTitleView"
        app:layout_constraintEnd_toStartOf="@+id/quantityValueView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/quantityValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/quantityTitleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quantityTitleView"
        app:layout_constraintTop_toTopOf="@+id/quantityTitleView"
        tools:text="100,00" />

    <TextView
        android:id="@+id/totalTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmOrderView"
        app:layout_constraintEnd_toStartOf="@+id/totalValueView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityTitleView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/totalValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalTitleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/totalTitleView"
        app:layout_constraintTop_toTopOf="@+id/totalTitleView"
        tools:text="100,00" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmOrderView"
        style="@style/Style.Button.Black"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/confirm_order"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTitleView" />

</androidx.constraintlayout.widget.ConstraintLayout>